@@ -67,6 +67,10 @@ Library
 - The methods `os.tmpnam()`, `os.tempnam()` and `os.tmpfile()` have been
   removed in favor of the tempfile module.
 
+- Removed the 'new' module.
+
+- Removed all types from the 'types' module that are easily accessable through
+  builtins.
 
 What's New in Python 3.0a1?
 ==========================
